final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: final-devops
  labels:
    app.kubernetes.io/name: devops-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: devops-app
